infra/kubernetes/k8s-preg/overlays/test/patch-app-deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pregnant-pills-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pregnant-pills
  template:
    metadata:
      labels:
        app: pregnant-pills
    spec:
      containers:
        - name: pregnant-pills-container
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe: null
          livenessProbe: null
          env:
            - name: APP_ENV
              valueFrom:
                configMapKeyRef:
                  name: pregnant-pills-config
                  key: APP_ENV

            - name: SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: pregnant-pills-secrets
                  key: SECRET_KEY

            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  name: pregnant-pills-secrets
                  key: DATABASE_URL
