infra/kubernetes/k8s-preg/overlays/test/patch-app-deployment-sqlite-emptydir.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pregnant-pills-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pregnant-pills
  template:
    metadata:
      labels:
        app: pregnant-pills
    spec:
      containers:
        - name: pregnant-pills-container
          image: rockpiryt/pregnant-pills:latest
          ports:
            - containerPort: 8080
          volumeMounts:
          - name: sqlite-db
            mountPath: /data
          env:
            - name: DB_PATH
              value: "/data/pill.db"
      volumes:
      - name: sqlite-db
        emptyDir: {}
