infra/kubernetes/k8s-preg/overlays/test/patch-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pregnant-pills-service
spec:
  type: NodePort # chcę się móc dobić z zewnątrz
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
